--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <!-- Logo -->
         <div class="pt-2">
           <img
-            src="img/marcos_blue.png"
-            class="#"
+            src="img/marcos_test_logo.svg"
             alt="marcos logo"
+            width="80px"
           />
         </div>
         <!-- Menu Items -->
