--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
           </h1>
           <p class="max-w-sm text-center text-midblue md:text-left">
             I am a full-stack software engineer based in NYC, with experience in
-            JavaScript/Node.js, Ruby, PostgreSQL, AWS, Docker, React, and C.
+            JavaScript/Node.js, Ruby, PostgreSQL, AWS, Docker, React, Goland and C.
             <br />
             <br />I recently co-created <strong>trellis</strong>: An open-source
-            Low-config CI/CD pipeline for serverless applications
+            low-config CI/CD pipeline for serverless applications.
           </p>
           <div class="flex justify-center md:justify-start">
             <a
@@ -292,7 +292,12 @@
       <!-- Container to heading and testm blocks -->
       <div class="max-w-6xl px-5 mx-auto mt-0 text-center">
         <!-- Heading -->
-        <h2 class="text-4xl font-bold text-center text-white pt-10 pb-6">
+        <!-- <h2 class="md:hidden text-4xl font-bold text-center text-white pt-10 pb-6">
+          Featured Project <p class="text-sm font-medium" >Desktop view shows additional projects</p>
+        </h2> -->
+
+        <h2 class="text-4xl font-bold text-white pt-10 pb-10 items-center"> 
+          <!-- hidden md:block  -->
           Other Projects
         </h2>
         <!-- Testimonials Container -->
@@ -302,7 +307,7 @@
           <!-- Testimonial 1 -->
 
           <div
-            class="hidden flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3"
+            class="flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3 mb-32"
           >
             <img src="img/s-shop.jpg" class="h-30 -mt-14 rounded-lg" alt="" />
             <h5 class="text-lg font-bold">Shopping Cart</h5>
@@ -313,7 +318,7 @@
 
           <!-- Testimonial 2 -->
           <div
-            class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3"
+            class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3 mb-32"
           >
             <img src="img/request8in.jpg" class="w-30 -mt-14 rounded" alt="" />
             <h5 class="text-lg font-bold">REQUEST8IN</h5>
@@ -326,7 +331,7 @@
 
           <!-- Testimonial 3 -->
           <div
-            class="hidden flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3"
+            class="flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray  md:w-1/3 mb-32"
           >
             <img src="img/recipeboss.jpg" class="w-30 -mt-14 rounded" alt="" />
             <h5 class="text-lg font-bold">RecipeBoss</h5>
