--- a/index.html
+++ b/index.html
@@ -25,11 +25,7 @@
       <div class="flex items-center justify-between">
         <!-- Logo -->
         <div class="pt-2">
-          <img
-            src="img/marcos_test_logo.svg"
-            alt="marcos logo"
-            width="80px"
-          />
+          <img src="img/marcos_test_logo.svg" alt="marcos logo" width="80px" />
         </div>
         <!-- Menu Items -->
         <div class="hidden space-x-6 md:flex text-trellisblue">
@@ -148,7 +144,8 @@
           </h1>
           <p class="max-w-sm text-center text-midblue md:text-left">
             I am a full-stack software engineer based in NYC, with experience in
-            JavaScript/Node.js, Ruby, PostgreSQL, AWS, Docker, React, Goland and C.
+            JavaScript/Node.js, Ruby, PostgreSQL, AWS, Docker, React, Goland and
+            C.
             <br />
             <br />I recently co-created <strong>trellis</strong>: An open-source
             low-config CI/CD pipeline for serverless applications.
@@ -290,13 +287,13 @@
     <!-- Testimonials -->
     <section id="testimonials" class="bg-lightblue">
       <!-- Container to heading and testm blocks -->
-      <div class="max-w-6xl px-5 mx-auto mt-0 text-center">
+      <div class="max-w-6xl px-5 mx-auto text-center">
         <!-- Heading -->
         <!-- <h2 class="md:hidden text-4xl font-bold text-center text-white pt-10 pb-6">
           Featured Project <p class="text-sm font-medium" >Desktop view shows additional projects</p>
         </h2> -->
 
-        <h2 class="text-4xl font-bold text-white pt-10 pb-10 items-center"> 
+        <h2 class="text-4xl font-bold text-white pt-10 pb-10 items-center">
           <!-- hidden md:block  -->
           Other Projects
         </h2>
@@ -307,35 +304,35 @@
           <!-- Testimonial 1 -->
 
           <div
-            class="flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3 mb-32"
+            class="flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3"
           >
             <img src="img/s-shop.jpg" class="h-30 -mt-14 rounded-lg" alt="" />
             <h5 class="text-lg font-bold">Shopping Cart</h5>
-            <p class="text-sm text-darkGrayishBlue">
+            <p class="text-sm text-darkGrayishBlue pb-10">
               A database-backed e-commerce app (React, Redux, MongoDB, Node.js)
             </p>
           </div>
-
+          <div class="md:hidden pt-10"><p class="text-lightblue"> hola</p></div>
           <!-- Testimonial 2 -->
           <div
-            class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3 mb-32"
+            class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3"
           >
             <img src="img/request8in.jpg" class="w-30 -mt-14 rounded" alt="" />
             <h5 class="text-lg font-bold">REQUEST8IN</h5>
-            <p class="text-sm text-darkGrayishBlue">
+            <p class="text-sm text-darkGrayishBlue pb-10">
               A real-time tool for monitoring and receiving webhooks
               (DigitalOcean Droplet, Express, MongoDB, Node.js, Nginx,
               PostgreSQL, React, Pug)
             </p>
           </div>
-
+          <div class="md:hidden pt-10"><p class="#">hola</p></div>
           <!-- Testimonial 3 -->
           <div
-            class="flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray  md:w-1/3 mb-32"
+            class="flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3"
           >
             <img src="img/recipeboss.jpg" class="w-30 -mt-14 rounded" alt="" />
             <h5 class="text-lg font-bold">RecipeBoss</h5>
-            <p class="text-sm text-darkGrayishBlue">
+            <p class="text-sm text-darkGrayishBlue pb-10">
               A recipe saving app that generates a weekly shopping list of
               ingredients (ERB, Ruby, Sinatra, NokoGiri)
             </p>
