Sauce a leee to

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           </h1>
           <p class="max-w-sm text-center text-midblue md:text-left">
             I am a full-stack software engineer based in NYC, with experience in
-            JavaScript/Node.js, Ruby, PostgreSQL, AWS, Docker, React, Goland and
+            JavaScript/Node.js, Ruby, PostgreSQL, AWS, Docker, React, Golang and
             C.
             <br />
             <br />I recently co-created <strong>trellis</strong>: An open-source
