--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <!-- Button -->
         <a
-          href="files/Marcos_Avila_Resume.pdf"
+          href="files/Marcos-Avila-Resume.pdf"
           class="hidden p-3 px-6 pt-2 text-white bg-trellisblue rounded-full baseline hover:bg-darkblue md:block transition-all delay-150"
           target="_blank"
           >My résumé</a
@@ -91,7 +91,7 @@
           >
 
           <a
-            href="files/Marcos_Avila_Resume.pdf"
+            href="files/Marcos-Avila-Resume.pdf"
             class="hover:text-darkblue transition-all delay-100"
             target="_blank"
           >
@@ -143,12 +143,9 @@
             Hello, I'm Marcos!
           </h1>
           <p class="max-w-sm text-center text-midblue md:text-left">
-            I am a full-stack software engineer based in NYC, with experience in
-            JavaScript/Node.js, Ruby, PostgreSQL, AWS, Docker, React, Golang and
-            C.
+            As a highly skilled and experienced Full-Stack Software Engineer, I bring a diverse background in technology and a strong commitment to delivering top-notch solutions. I am based in NYC and have extensive expertise in JavaScript/Node.js, Ruby, PostgreSQL, AWS, Docker, React, Golang, and C.
             <br />
-            <br />I recently co-created <strong>trellis</strong>: An open-source
-            low-config CI/CD pipeline for serverless applications.
+            <br />I am also a co-creator of <strong>trellis</strong>, a highly innovative open-source CI/CD pipeline for serverless applications. With my keen eye for detail, exceptional problem-solving skills, and passion for developing state-of-the-art software, I am confident in my ability to contribute to any project and drive it to success.
           </p>
           <div class="flex justify-center md:justify-start">
             <a
@@ -352,20 +349,19 @@
     <!-- Footer -->
     <footer class="bg-veryDarkBlue">
       <div class="bg-trellisblue mt-1">
-        <div class="mx-auto text-center py-16 px-4 sm:py-20 sm:px-6 lg:px-8">
+        <div class="sm:py-20 sm:px-6 lg:px-8">
           <h2 class="text-3xl font-extrabold text-white sm:text-4xl">
             <span class="block">Let's connect!</span>
           </h2>
-          <p class="mt-4 mb-4 text-lg leading-6 text-white">
+          <p class="text-lg leading-6 text-white" style="text-align: left;">
             <!-- I am looking for my next opportunity! Please get in touch if you think
         I'd be a good fit for your team. -->
-            I'm currently on the lookout for new opportunities.<br />
-            If you enjoyed what you saw and want to learn more, please contact
-            me!
+        I am an ambitious and results-oriented software engineer that is continuously on the lookout for new challenges and ways to further my knowledge and expertise. <br> Please don't hesitate to get in touch with me if you're interested in my knowledge and experience and would want to discuss the possibility of working together.<br> It would be my pleasure to talk with you about the ways in which I may contribute to your organization.
+
           </p>
           <div class="flex items-center justify-center flex-wrap">
             <a
-              href="files/Marcos_Avila_Resume.pdf"
+              href="files/Marcos-Avila-Resume.pdf"
               target="_blank"
               class="w-2/5 mt-4 mx-2 inline-flex items-center shadow-md justify-center px-5 py-2 border border-transparent font-semibold rounded-full text-trellisblue bg-white hover:bg-darkblue sm:w-auto transition-all delay-100"
             >
