勇気、愛情、信頼、希望、全部そろうと幸せになれるの

--- a/index.html
+++ b/index.html
@@ -349,15 +349,16 @@
     <!-- Footer -->
     <footer class="bg-veryDarkBlue">
       <div class="bg-trellisblue mt-1">
-        <div class="sm:py-20 sm:px-6 lg:px-8">
+        <div class="mx-auto text-center py-16 px-4 sm:py-20 sm:px-6 lg:px-8">
           <h2 class="text-3xl font-extrabold text-white sm:text-4xl">
             <span class="block">Let's connect!</span>
           </h2>
-          <p class="text-lg leading-6 text-white" style="text-align: left;">
+          <p class="mt-4 mb-4 text-lg leading-6 text-white">
             <!-- I am looking for my next opportunity! Please get in touch if you think
         I'd be a good fit for your team. -->
-        I am an ambitious and results-oriented software engineer that is continuously on the lookout for new challenges and ways to further my knowledge and expertise. <br> Please don't hesitate to get in touch with me if you're interested in my knowledge and experience and would want to discuss the possibility of working together.<br> It would be my pleasure to talk with you about the ways in which I may contribute to your organization.
-
+            I'm currently on the lookout for new opportunities.<br />
+            If you enjoyed what you saw and want to learn more, please contact
+            me!
           </p>
           <div class="flex items-center justify-center flex-wrap">
             <a
